objects/Sprint__c.object
<CustomObject>
    <fields>
        <fullName>Completed_WorkItems_Story_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completed WorkItems Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>TODAY()+1</defaultValue>
        <description>Sprint end date</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_Completed_WorkItems_Story_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Not Completed WorkItems Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Completed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percent Completed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>ProjectToSprint</relationshipLabel>
        <relationshipName>ProjectToSprint</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Sprint start date</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_WorkItems_Story_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total WorkItems Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_After_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Sprint end date cant be before start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Backlog_cant_be_modified</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Sprint name cant be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_cant_be_modified</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Project__c)</errorConditionFormula>
        <errorDisplayField>Project__c</errorDisplayField>
        <errorMessage>Project cant be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_After_Project_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &lt;  Project__r.Start_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Sprint start date cant be before Project start date</errorMessage>
    </validationRules>
</CustomObject>